// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package descriptor;
option cc_enable_arenas = true;
option go_package = "github.com/theNorstroem/spectools/pkg/descriptor;descriptorpb";
option java_multiple_files = true;
option java_outer_classname = "FuroDescriptorProto";
option java_package = "pro.furo.descriptor";
option objc_class_prefix = "FPB";

import "furo/furo.proto";


// Defines a queryparam field (for rpc type)
message Queryparam {  

    // the field type, https://developers.google.com/protocol-buffers/docs/proto3#scalar
    string type = 2;

    // the field description
    string description = 1;

    // meta information for the client, like label, default, repeated, options...
    furo.FieldMeta meta = 3;

    // constraints for a field, like min{}, max{}, step{}. Not used at the moment
    map<string,furo.FieldConstraint> constraints = 4;
}

// Defines a field in the furo spec
message Field {  

    // the field type, https://developers.google.com/protocol-buffers/docs/proto3#scalar
    string type = 2;

    // the field description
    string description = 1;

    // information for the proto generator, like number, type
    descriptor.Fieldproto __proto = 6;

    
    descriptor.Uiextension __ui = 7;

    // meta information for the client, like label, default, repeated, options...
    furo.FieldMeta meta = 3;

    // constraints for a field, like min{}, max{}, step{}
    map<string,furo.FieldConstraint> constraints = 4;
}

// Proto options for a field
message Fieldproto {  

    // The field numbers are used to identify your fields in the message binary format, and should not be changed once your message type is in use.
    int32 number = 2;

    // Assign field to a protobuf oneof group.
    string oneof = 3;
}

// Lifecycle information for a type or a service
message Lifecycle {  

    // Is this version deprecated
    bool deprecated = 1;

    // Inform about the replacement here, if you have one
    string info = 2;
}

// Main proto for a type
message Protoextension {  

    // the package this type belogs to
    string package = 1;

    // the target proto file for this type
    string targetfile = 3;

    // needed imports like [ "spec/descriptor.proto", "google/protobuf/empty.proto" ]
    repeated string imports = 2;

    // Proto options Todo: find a solution for boolean options
    map<string,string> options = 4;
}

// Defines a rpc for a service
message Rpc {  

    // the service description
    string description = 1;

    // RPC name https://developers.google.com/protocol-buffers/docs/proto3#services
    string rpc_name = 2;

    // This data is needed for...
    descriptor.Servicedeeplink deeplink = 5;

    // Request and response types for the service
    descriptor.Servicereqres data = 3;

    // Query params, it is recomended to use string types
    map<string,descriptor.Queryparam> query = 4;
}

// Defines a service
message Service {  

    // Describe the rpcs or so
    string name = 1;

    // The version number, use semver
    string version = 3;

    // Describe the rpcs or so
    string description = 2;

    // todo replace with lc type
    descriptor.Lifecycle lifecycle = 4;

    // information for the proto generator, should be removed for the client spec
    descriptor.Protoextension __proto = 5;

    // RPCs for the service
    map<string,descriptor.Rpc> services = 6;
}

// URL information for the service
message Servicedeeplink {  

    // Describe the query params
    string description = 1;

    // the relationship
    string rel = 2;

    // method of curl
    string method = 3;

    // The link pattern, like /api/xxx/{qp}/yyy
    string href = 4;
}

// Repuest and response types for services, used in service.type
message Servicereqres {  

    // Define the request type, leave this field empty if not needed
    string request = 1;

    // Define the response type, leave this field empty if not needed
    string response = 2;
}

// Defines a type in the furo spec
message Type {  

    // Name of the type
    string name = 1;

    // the type 
    string type = 2;

    // the type description
    string description = 3;

    // information for the proto generator, should be removed for the client spec
    descriptor.Protoextension __proto = 4;

    // fields of a type
    map<string,descriptor.Field> fields = 5;
}

// ui hints for a field
message Uiextension {  

    // component hint for ui-builder
    string component = 1;

    // UI element flags like full, double, hidden,...
    repeated string flags = 2;

    // Skip adding this field on ui init
    bool no_init = 3;

    // do not skip this field, even it is in the default skip list
    bool no_skip = 4;
}